--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 API_ENDPOINT="http://localhost";
 SERVER_PORT="8080";
-AUTH_TOKEN="SUPER_SECRET_API_KEY_1,SUPER_SECRET_API_KEY_2,SUPER_SECRET_API_KEY_3,SUPER_SECRET_API_KEY_4,SUPER_SECRET_API_KEY_5";
+AUTH_KEYS_PATHNAME="authorised_api_access_keys.txt"
