tests: add the acceptance test for math

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 API_ENDPOINT="http://localhost";
 SERVER_PORT="8080";
 AUTH_KEYS_PATHNAME="authorised_api_access_keys.txt"
+LOG_PATHNAME="access_log.txt"
